# django-htmx-e_learning

./: .gitignore  LICENSE  README.md  bun.lockb  db.sqlite3  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
core/: admin.py  apps.py  cart.py  factories.py  forms.py  models.py  urls.py  utils.py  views.py
core/jinja2/: base.html  home.html  navbar.html  test.html
core/jinja2/registration/: login.html  register.html
core/management/commands/: generate_dummy_data.py
core/migrations/: 0001_initial.py  0002_course_thumbnail_alter_course_preview.py  0003_course_enrolled_users.py  0004_alter_course_price.py  0005_alter_courseaudience_description_and_more.py  0006_alter_courselecture_order.py  0007_alter_courselecture_content.py  0008_alter_course_options_alter_courselecture_order.py  0009_alter_courselecture_order.py
core/static/core/: home.css  ui.css
core/static/css/: custom.css  ui.css
core/static/js/: alert.js  videoControls.js
core/templates/: base.html  home.html  home2.html  navbar.html  test.html
core/templates/core/: cart.html  course_content.html  course_create_form.html  course_creator_detail.html  course_detail.html  course_video_page.html  courselecture_form.html  my_courses.html  user_course_list.html  wizard_form.html
core/templates/forms/: course_create.html
core/templates/partials/: alert-message.html  course-list.html  course-rating.html  (+2 more)
core/templatetags/: core_filters.py
templates/: 403.html  base_field.html
udemy/: asgi.py  auth_utils.py  context_processors.py  settings.py  urls.py  views.py
(+1 files in other folders)
