[tool.poetry]
name = "udemy"
version = "0.1.0"
description = ""
authors = ["Milkias Yeheyis <milkias.yeheyis@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
jinja2 = "^3.1.4"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
crispy-tailwind = "^1.0.3"
pillow = "^10.3.0"
django-htmx = "^1.17.3"
django-render-block = "^0.9.2"

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.0.2"
factory-boy = "^3.3.0"

[tool.djlint]
profile = "django"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
